--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -42,26 +42,112 @@ jupyterhub:
     # ref: https://zero-to-jupyterhub.readthedocs.io/en/stable/resources/reference.html#hub-extraconfig
     extraEnv:
       # Select Authentication Type: LTI11, LTI13, AUTH0
-      CUSTOM_AUTH_TYPE: AUTH0
+      CUSTOM_AUTH_TYPE:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: CUSTOM_AUTH_TYPE
       # Provide Organization Name that matches Namespace
-      ORGANIZATION_NAME: illumidesk
-      JUPYTERHUB_API_URL: http://hub:8081/hub/api
+      ORGANIZATION_NAME:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: ORGANIZATION_NAME
+      # Jupyterhub API URL
+      JUPYTERHUB_API_URL:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: JUPYTERHUB_API_URL
       # Mount Root
-      ILLUMIDESK_MNT_ROOT: '/illumidesk-courses'
-      OIDC_AUTHORIZE_URL: "https://auth.illumidesk.com/authorize"
-      OIDC_TOKEN_URL: "https://auth.illumidesk.com/oauth/token"
-      OIDC_USERDATA_URL: "https://auth.illumidesk.com/userinfo"
-      OIDC_CLIENT_ID: ""
-      OIDC_CLIENT_SECRET: ""
-      OIDC_CALLBACK_URL: ""
-      LTI_CONSUMER_KEY: lti_11_consumer_key
-      LTI_SHARED_SECRET: lti_11_shared_secret
-      LTI13_PRIVATE_KEY: '/srv/jupyterhub/rsa_private.key'
-      LTI13_CLIENT_ID: ""
-      LTI13_ENDPOINT: https://illumidesk.instructure.com/api/lti/security/jwks
-      LTI13_AUTHORIZE_URL: https://illumidesk.instructure.com/api/lti/authorize_redirect
-      LTI13_TOKEN_URL: https://illumidesk.instructure.com/login/oauth2/token
-      POSTGRES_JUPYTERHUB_PORT: '5432'
+      ILLUMIDESK_MNT_ROOT: "/illumidesk-courses"
+      # OIDC Authorize URL
+      OIDC_AUTHORIZE_URL:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: OIDC_AUTHORIZE_URL
+      OIDC_TOKEN_URL:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: OIDC_TOKEN_URL
+      OIDC_USERDATA_URL:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: OIDC_USERDATA_URL
+      OIDC_CLIENT_ID:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: OIDC_CLIENT_ID
+      OIDC_CLIENT_SECRET:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: OIDC_CLIENT_SECRET
+      OIDC_CALLBACK_URL:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: OIDC_CALLBACK_URL
+      LTI_CONSUMER_KEY:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: LTI_CONSUMER_KEY
+      LTI13_PRIVATE_KEY: "/srv/jupyterhub/rsa_private.key"
+      LTI13_CLIENT_ID:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: LTI13_CLIENT_ID
+      LTI13_ENDPOINT:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: LTI13_ENDPOINT
+      LTI13_AUTHORIZE_URL:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: LTI13_AUTHORIZE_URL
+      LTI13_TOKEN_URL:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: LTI13_TOKEN_URL
+      POSTGRES_NBGRADER_USER:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: POSTGRES_NBGRADER_USER
+      POSTGRES_NBGRADER_HOST:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: POSTGRES_NBGRADER_HOST
+      POSTGRES_JUPYTERHUB_HOST:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: POSTGRES_JUPYTERHUB_HOST
+      POSTGRES_JUPYTERHUB_USER:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: POSTGRES_JUPYTERHUB_USER
+      POSTGRES_JUPYTERHUB_PORT:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: POSTGRES_JUPYTERHUB_PORT
+      POSTGRES_JUPYTERHUB_DB:
+        valueFrom:
+          configMapKeyRef:
+            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
+            key: POSTGRES_JUPYTERHUB_DB
     extraConfig:
       # The logo that appears on the top right of the control panel and end-user notebooks with Jupyter Classic.
       logoConfig: |
@@ -94,7 +180,7 @@ jupyterhub:
               or 'ild_test_consumer_key': os.environ.get('LTI_SHARED_SECRET')
               or 'ild_test_shared_secret'
           }
-        elif custom_auth_type == 'DUMB':
+        elif custom_auth_type == 'DUMMY':
           c.JupyterHub.authenticator_class = 'illumideskdummyauthenticator.authenticator.IllumiDeskDummyAuthenticator'
           c.Authenticator.enable_auth_state = True
         elif custom_auth_type == 'AUTH0':
@@ -344,6 +430,16 @@ allowNFS:
   type: 'local'
   # specify mount path
   path: /
+
+## To test with a local file system, enable the following and confirm your instance has /illumidesk-nb-exchange-directory
+## and /illumidesk-courses directory
+##
+allowLocal:
+  # enables local file system
+  enabled: false
+
+illumideskSettings:
+  enabled: true
 
 ## Grader setup service
 ##
