feat: Adds grader resource configuration (#134)

--- a/charts/illumidesk/templates/grader_pv.yaml
+++ b/charts/illumidesk/templates/grader_pv.yaml
@@ -9,7 +9,7 @@ metadata:
 {{ end }}
 spec:
   capacity:
-    storage: 20Gi
+    storage: {{ .Values.graderSetupService.storageCapacity | default "1Gi" | quote }}
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
