--- a/charts/illumidesk/templates/grader_setup_service.yaml
+++ b/charts/illumidesk/templates/grader_setup_service.yaml
@@ -101,6 +101,13 @@ spec:
       containers:
         - name: grader-setup-container
           image: {{ .Values.graderSetupService.graderSetupImage }}
+          resources:
+            requests:
+              cpu: {{ .Values.graderSetupService.graderCpuGuarantee | default "" | quote }}
+              memory: {{ .Values.graderSetupService.graderMemGuarantee | default "" | quote }}
+            limits:
+              cpu: {{ .Values.graderSetupService.graderCpuLimit | default "0.5" | quote }}
+              memory: {{ .Values.graderSetupService.graderMemLimit | default "1Gi" | quote }}
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
