fix: Sets grader setup service cpu and mem guarantee defaults (#142)

--- a/charts/illumidesk/templates/grader_setup_service.yaml
+++ b/charts/illumidesk/templates/grader_setup_service.yaml
@@ -103,11 +103,11 @@ spec:
           image: {{ .Values.graderSetupService.graderSetupImage }}
           resources:
             requests:
-              cpu: {{ .Values.graderSetupService.graderCpuGuarantee | default "" | quote }}
-              memory: {{ .Values.graderSetupService.graderMemGuarantee | default "" | quote }}
+              cpu: {{ .Values.graderSetupService.graderCpuGuarantee | default "200m" | quote  }}
+              memory: {{ .Values.graderSetupService.graderMemGuarantee | default "400Mi" | quote }}
             limits:
-              cpu: {{ .Values.graderSetupService.graderCpuLimit | default "1000m" | quote }}
-              memory: {{ .Values.graderSetupService.graderMemLimit | default "1Gi" | quote }}
+              cpu: {{ .Values.graderSetupService.graderCpuLimit | default "400m" | quote }}
+              memory: {{ .Values.graderSetupService.graderMemLimit | default "800Mi" | quote }}
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
