--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -300,6 +300,14 @@ jupyterhub:
       type: ClusterIP
   # Single user server
   singleuser:
+    # Default CPU Limits and Gurantees
+    cpu:
+      # Max CPU that can be allocated
+      limit: 0.5
+    # Default Memory Limits and Gurantees
+    memory:
+      # Max Memory that can be allocated
+      limit: 1G
     # Default container command inherited from the jupyter/docker-stacks base image.
     # https://github.com/jupyter/docker-stacks/blob/master/base-notebook/start-singleuser.sh
     cmd: start-singleuser.sh
