feat: Updates CPU and Mem resource for Hub (#140)

--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -30,6 +30,18 @@ jupyterhub:
   # JupyterHub's application settings
   # ref: https://github.com/jupyterhub/zero-to-jupyterhub-k8s/blob/master/jupyterhub/values.yaml
   hub:
+    # Jupyterhub resources regarding requests for CPU and memory
+    resources:
+      requests:
+        # CPU that is allocated to the hub
+        cpu: "200m"
+        # memory that is allocated to the hub
+        memory: "400Mi"
+      limits:
+        # Max CPU that is allocated to the hub
+        cpu: "400m"
+        # Max memory that is allocated to the hub
+        memory: "800Mi"
     config:
     # JupyterHub's database configuration. Defaults to "postgres" since other options, such as "sqlite-pvc",
     # require additional PVC configuration settings.
