docs: Fix illumidesk-nb-exchange volume typo in docs (#148)

--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -451,7 +451,7 @@ allowNFS:
   # specify mount path
   path: /
 
-## To test with a local file system, enable the following and confirm your instance has /illumidesk-nb-exchange-directory
+## To test with a local file system, enable the following and confirm your instance has /illumidesk-nb-exchange
 ## and /illumidesk-courses directory
 ##
 allowLocal:
