--- a/charts/illumidesk/Chart.yaml
+++ b/charts/illumidesk/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: illumidesk
-version: 5.7.0
+version: 5.8.0
 appVersion: 1.2.0
-description: An extention of the JupyterHub chart with additional IllumiDesk resources
+description: An extention of the JupyterHub Chart with additional IllumiDesk resources
 icon: https://configs.illumidesk.com/images/illumidesk-80.png
 dependencies:
   - name: jupyterhub
