--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -185,7 +185,7 @@ jupyterhub:
               (r'/lti13/jwks$', 'illumidesk.lti13.handlers.LTI13JWKSHandler'),
             ]
         elif custom_auth_type == 'LTI11':
-          c.JupyterHub.authenticator_class = 'illumidesk.authenticators.authenticator.LTI11Authenticator'
+          c.JupyterHub.authenticator_class = 'ltiauthenticator.LTIAuthenticator'
           c.LTIAuthenticator.consumers = {
               os.environ.get('LTI_CONSUMER_KEY')
               or 'ild_test_consumer_key': os.environ.get('LTI_SHARED_SECRET')
