--- a/charts/illumidesk/templates/shared_pv.yaml
+++ b/charts/illumidesk/templates/shared_pv.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: shared-pv-{{ .Release.Name }}
+  name: shared-pv-{{ .Release.Namespace }}
 {{ if .Values.allowLocal.enabled }}
   labels:
     type: local
